# Stellar-interior-model

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: config.py  config.yaml
docs/: code-structure.md  numerical-method.md  physics.md  results.md  roadmap.md  usage.md
notebook/: model_execution.ipynb
scripts/: generate_docs_figures.py
src/: energy.py  model.py  optimization.py  plotting.py  star_class.py
tests/: test_energy.py  test_optimization.py  test_stellar_model.py
